Change default language to English and update languages

--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 similarity_threshold: 0.9
-default_language: "de-CH"
+default_language: "en"
 languages:
-  - "de-CH"
+  - "de-ch"
   - "fr"
   - "en"
