Add new section aliases for project characterization

--- a/config/section_aliases.yaml
+++ b/config/section_aliases.yaml
@@ -7,7 +7,18 @@
 # words, not just typos) or where you want explicit control.
 
 # German genitive variants
+"(OhneTitel) Identifikation und Weichenfragen ": "Identifikation und Weichenfragen"
+"(OhneTitel) Identifikation und Weichenfragen": "Identifikation und Weichenfragen"
 "Charakterisierung des Projektes": "Charakterisierung des Projekts"
-
-# Trailing whitespace (stripped automatically, but listed for documentation)
-# "(OhneTitel) Identifikation und Weichenfragen ": "Identifikation und Weichenfragen"
+"Charakterisierung (TRL ) + Komeptenzen": "Charakterisierung des Projekts"
+"Charakterisierung (Surveyübergreifend)": "Charakterisierung des Projekts"
+"ProjektLancierung fur MitUP": "Projektlancierung und Ziele"
+"Ergebnisse des Innovationschecks": "Zielerreichung des Innovationscheck"
+"Weiterfuehrung": "Weiterführung des Projekts"
+"IPR (Teil UP Start)": "Ergebnisse"
+"IPR (Rest)": "Ergebnisse"
+"Eigentumsrechte": "Ergebnisse"
+"Zufriedenheit mit Innosuisse Programm": "Projekterfolg und Abschluss"
+"Eigenschaften der Innovation": "Ergebnisse"
+"Zielerreichung und Ergebnisse": "Ergebnisse"
+"Wirkungen und Nutzen": "Nutzen"
