Add alias for 'Zufriedenheit' in section_aliases.yaml

--- a/config/section_aliases.yaml
+++ b/config/section_aliases.yaml
@@ -19,6 +19,7 @@
 "IPR (Rest)": "Ergebnisse"
 "Eigentumsrechte": "Ergebnisse"
 "Zufriedenheit mit Innosuisse Programm": "Projekterfolg und Abschluss"
+"Zufriedenheit": "Projekterfolg und Abschluss"
 "Eigenschaften der Innovation": "Ergebnisse"
 "Zielerreichung und Ergebnisse": "Ergebnisse"
 "Wirkungen und Nutzen": "Nutzen"
