Update section aliases in YAML configuration

--- a/config/section_aliases.yaml
+++ b/config/section_aliases.yaml
@@ -15,7 +15,9 @@
 "Charakterisierung (Surveyübergreifend)": "Charakterisierung des Projekts"
 "ProjektLancierung fur MitUP": "Projektlancierung und Ziele"
 "Ergebnisse des Innovationschecks": "Zielerreichung des Innovationscheck" # IS
-"Weiterfuehrung": "Weiterführung des Projekts"
+"Weiterfuehrung": "Weiterführung"
+"Weiterführung des Projekts": "Weiterführung"
+"Start-up Development" : "Weiterführung"
 "IPR (Teil UP Start)": "Ergebnisse"
 "IPR (Rest)": "Ergebnisse"
 "Eigentumsrechte": "Ergebnisse"
@@ -34,3 +36,10 @@
 "Property rights": "Ergebnisse"
 "Zusammenarbeit mit Forschungspartner": "Zusammenarbeit im Projekt"
 "Overall assessment": "Projekterfolg und Abschluss"
+"Ursprung der Idee": "Charakterisierung des Projekts"
+"Economic project results": "Ökonomische Projektwirkungen"
+"Direct results": "Ergebnisse"
+"Characterisation of the project": "Charakterisierung des Projekts"
+"Market entry": "Ökonomische Projektwirkungen"
+"Further impacts and benefits": "Nutzen"
+"Project goals and success": "Projekterfolg und Abschluss"
