Add new section aliases for identification and personnel

--- a/config/section_aliases.yaml
+++ b/config/section_aliases.yaml
@@ -43,3 +43,5 @@
 "Market entry": "Ökonomische Projektwirkungen"
 "Further impacts and benefits": "Nutzen"
 "Project goals and success": "Projekterfolg und Abschluss"
+"(OhneTitel) Identification and filter questions": "Identifikation und Weichenfragen"
+"Personnel": "Identifikation und Weichenfragen"
